# llm-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
docs/: Starter-Knowledge-For-HTTP-Logs.md  code-standards.md  http-analytics-plan.md  log-field-reference.md  plugin-guide.md  ui-spec.md
docs/grounding/external-kb/: KB-01-01-smtp-delivery-lifecycle.md  KB-01-02-mx-records-dns.md  KB-01-03-delivery-vs-deliverability.md  KB-01-04-email-headers.md  KB-02-05-spf.md  KB-02-06-dkim.md  KB-02-07-dmarc.md  KB-02-08-bimi.md  KB-02-09-arc.md  KB-03-10-ip-vs-domain-reputation.md  KB-03-11-ip-warming.md  KB-03-12-shared-vs-dedicated-ips.md  KB-03-13-feedback-loops-complaints.md  KB-03-14-blocklists.md  KB-04-15-hard-vs-soft-bounces.md  KB-04-16-smtp-response-codes.md  KB-04-17-bounce-rate-thresholds.md  KB-04-18-suppression-list-management.md  KB-05-19-why-email-lists-degrade.md  KB-05-20-email-verification-and-validation.md  KB-05-21-sunset-policies.md  KB-05-22-spam-traps.md  KB-05-23-purchased-or-scraped-lists.md  KB-06-24-gmail-deliverability.md  KB-06-25-microsoft-deliverability.md  KB-06-26-yahoo-aol-deliverability.md  KB-06-27-apple-icloud-deliverability.md  KB-07-28-how-modern-spam-filters-work.md  KB-07-29-content-based-filtering.md  KB-07-30-engagement-based-filtering.md  KB-07-31-header-hygiene-and-technical-signals.md  KB-08-32-reading-interpreting-bounce-logs.md  KB-08-33-diagnosing-sudden-deliverability-drop.md  KB-08-34-diagnosing-slow-gradual-deliverability-decline.md  KB-08-35-using-seed-lists-inbox-placement-testing.md  KB-08-36-monitoring-tools-and-dashboards.md  (+19 more)
infra/: init-db.sql
infra/nginx/: Dockerfile  nginx.conf
mcp-server/: .env.example  Dockerfile  pyproject.toml
mcp-server/src/production_mcp/: __init__.py  config.py  server.py
mcp-server/src/production_mcp/backends/: __init__.py  opensearch.py  postgres.py  redis.py  s3.py
mcp-server/tests/: test_server.py
src/llm_pipeline/: __init__.py  cli.py  config.py
tests/: test_agent.py  test_agent_registry.py  test_api.py  test_datetime_tools.py  test_ingestion.py  test_investigation_loop.py  test_investigation_storage.py  test_manifest.py  test_quality_gates.py  test_report_builder.py  test_report_regenerate.py  test_report_renderer.py  test_reviewer.py  test_synthesizer.py  test_token_tracker.py  test_tool_registry.py
tests/test_email_analytics/: conftest.py  test_aggregator.py  test_anomaly.py  test_graph.py  test_loader.py  test_parsers.py  test_smtp_classifier.py  test_trends.py
tests/test_http_analytics/: conftest.py  test_aggregator.py  test_anomaly.py  test_classifier.py  test_domain.py  test_loader.py  test_multi_domain.py  test_tools.py  test_trends.py
tests/test_knowledge/: test_compare.py  test_import_grounded.py  test_integration.py  test_models.py  test_retrieval.py  test_store.py  test_weaviate_schema.py
tests/test_summarization/: conftest.py  test_embed.py  test_graph.py  test_serializers.py
ui/: .gitignore  package-lock.json
ui/client/: index.html
ui/server/: routes.ts  storage.ts
ui/shared/: schema.ts
(+163 files in other folders)
