[project]
name = "llm-pipeline"
version = "0.1.0"
description = "Agentic LLM pipeline with tool use, memory, planning, and multi-step reasoning"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "langchain-community>=0.3",
    "langchain-text-splitters>=0.3",
    "langgraph>=0.2",
    "chromadb>=0.5",
    "langchain-chroma>=0.2",
    "pypdf>=4.0",
    "pydantic-settings>=2.0",
    "typer[all]>=0.12",
    "structlog>=24.0",
]

[project.scripts]
llm-pipeline = "llm_pipeline.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_pipeline"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
